lot of changes..

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,6 +1,21 @@
+@import url(http://fonts.googleapis.com/css?family=Lato);
+@import "~styles/colors";
+
+body {
+    font: 130% 'Lato';
+    color: @base3;
+    text-rendering: optimizelegibility;
+    // line-height: 1.5;
+    font-weight: normal;
+    background-color: @base1;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent; /* For some Androids */
+}
 
 .main {
-    display: block;
-    max-width: 300px;
+    // padding-top: 6rem;
     margin: 0 auto;
+    display: block;
+    // background-color: @base4;
+    max-width: 360px;
 }
