--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,3 +1,13 @@
+@base1: #EFECCA;
 
-@nice-warm: rgba(191, 165, 149, .5);
-@blue: rgba(101, 148, 183, 1);
+@base2: #E6E2AF;
+
+@base3: #045973;
+
+@base3-light: rgba(4, 89, 115, .8);
+
+@base4: #A39F8C;
+
+@base5: #002F2F;
+
+@base6: #9E563F;
