--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -1,7 +1,15 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald);
+@import "~styles/colors";
+
 header {
-    width: 70%;
+    // width: 70%;
     margin: 0 auto;
-    padding-top: 30px;
+
+    position: relative;
+    // left: -1rem;
+    padding-top: 15px;
+    // font-family: 'Oswald';
+    // color: #7F7C60;
     // border-bottom: 2px dotted #AFABA8;
-    margin-bottom: 70px;
+    margin-bottom: 5rem;
 }
