--- a/app/styles/checkbox.less
+++ b/app/styles/checkbox.less
@@ -2,16 +2,21 @@
 
 .checkbox-animated {
   position: relative;
-  top: -0.07rem;
+  top: -0.13rem;
   left: -0.775rem;
   margin: 0 1rem 0 1;
   margin-right: 20px;
   cursor: pointer;
 }
 
-label {
+.checkbox-label {
     position: relative;
     right: -1rem;
+}
+
+.checkbox-label-done {
+    text-decoration: line-through;
+    color: @base4;
 }
 
 
@@ -25,7 +30,7 @@ label {
   z-index: 1;
   width: 1rem;
   height: 1rem;
-  border: 2px solid @nice-warm;
+  border: 2px solid @base3;
 }
 
 
@@ -36,7 +41,7 @@ label {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
   height: .5rem;
-  border-color: @blue;
+  border-color: @base4;
   border-top-style: none;
   border-right-style: none;
     text-decoration: line-through;
@@ -49,7 +54,7 @@ label {
   left: 0;
   width: 1.1rem;
   height: 1.1rem;
-  background: #fff;
+  background: @base1;
   cursor: pointer;
 }
 
