--- a/app/styles/list_item.less
+++ b/app/styles/list_item.less
@@ -3,8 +3,13 @@ ul {
 }
 
 ul li {
-    padding-bottom: 1em;
+    padding-bottom: 1.5rem;
 }
+
+li:last-child {
+    padding-bottom: 0rem;
+}
+
 
 
 
