--- a/app/styles/list_item.less
+++ b/app/styles/list_item.less
@@ -1,3 +1,5 @@
+@import "~styles/colors";
+
 ul {
     list-style-type: none;
 }
@@ -10,6 +12,22 @@ li:last-child {
     padding-bottom: 0rem;
 }
 
+.delete-symbol {
+    position: relative;
+    left: -5rem;
+}
+
+.delete-icon {
+    display: inline-block;
+    border: none;
+    background-color: @base1;
+    padding-left: 0.2em;
+    position: relative;
+    // top: 0.3rem;
+left: -5rem;
+    padding-right: .3rem;
+    fill: @base4 ;
+}
 
 
 
