list animation work beautifully

--- a/app/styles/checkbox.less
+++ b/app/styles/checkbox.less
@@ -20,6 +20,7 @@
 }
 
 
+
 .checkbox-animated:before {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -41,6 +42,7 @@
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
   height: .5rem;
+  top: 0.15rem;
   border-color: @base4;
   border-top-style: none;
   border-right-style: none;
