--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -2,3 +2,52 @@
     border-top: 1px;
     padding-left: 14px;
 }
+.items {
+    list-style-type: none; padding: 0;
+    height: 390px;
+    // overflow-y: auto;
+    // overflow-x: hidden;
+    // width: 200px;
+}
+.items li {
+    height: 50px; width: 100%; line-height: 50px; padding-left: 20px;
+    position: absolute; top: 0; left: 0;
+    transition: all .2s ease-out;
+}
+
+// .items li#li-input {
+//     // transition: all .02s ease-out;
+//     transition: none;
+// }
+
+/* See later in the blog post for a cleaner way to generate these rules */
+.items li:nth-child(1)  { transform: translate3d(0, 0%, 0); }
+.items li:nth-child(2)  { transform: translate3d(0, 100%, 0); }
+.items li:nth-child(3)  { transform: translate3d(0, 200%, 0); }
+.items li:nth-child(4)  { transform: translate3d(0, 300%, 0); }
+.items li:nth-child(5)  { transform: translate3d(0, 400%, 0); }
+.items li:nth-child(6)  { transform: translate3d(0, 500%, 0); }
+.items li:nth-child(7)  { transform: translate3d(0, 600%, 0); }
+.items li:nth-child(8)  { transform: translate3d(0, 700%, 0); }
+.items li:nth-child(9)  { transform: translate3d(0, 800%, 0); }
+.items li:nth-child(10) { transform: translate3d(0, 900%, 0); }
+.items li:nth-child(11) { transform: translate3d(0, 1000%, 0); }
+.items li:nth-child(12) { transform: translate3d(0, 1100%, 0); }
+.items li:nth-child(13) { transform: translate3d(0, 1200%, 0); }
+.items li:nth-child(14) { transform: translate3d(0, 1300%, 0); }
+.items li:nth-child(15) { transform: translate3d(0, 1400%, 0); }
+.items li:nth-child(16) { transform: translate3d(0, 1500%, 0); }
+.items li:nth-child(17) { transform: translate3d(0, 1600%, 0); }
+.items li:nth-child(18) { transform: translate3d(0, 1700%, 0); }
+.items li:nth-child(19) { transform: translate3d(0, 1800%, 0); }
+.items li:nth-child(20) { transform: translate3d(0, 1900%, 0); }
+.items li:nth-child(21) { transform: translate3d(0, 2000%, 0); }
+.items li:nth-child(22) { transform: translate3d(0, 2100%, 0); }
+.items li:nth-child(23) { transform: translate3d(0, 2200%, 0); }
+.items li:nth-child(24) { transform: translate3d(0, 2300%, 0); }
+.items li:nth-child(25) { transform: translate3d(0, 2400%, 0); }
+.items li:nth-child(26) { transform: translate3d(0, 2500%, 0); }
+.items li:nth-child(27) { transform: translate3d(0, 2600%, 0); }
+.items li:nth-child(28) { transform: translate3d(0, 2700%, 0); }
+.items li:nth-child(29) { transform: translate3d(0, 2800%, 0); }
+.items li:last-child { }
