--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -7,7 +7,8 @@
 
 Input[type='text'] {
     border: 0 !important;
-    background-color: @base1 !important;
+    // background-color: @base1 !important;
+    background-color: transparent;
     outline: 0;
     width: 12rem;
     padding-left: 0;
@@ -32,7 +33,9 @@ Input[type='text'] {
 
 form {
     // margin-top: .2rem;
-    padding-left: 2.0rem;
+    // padding-left: 2.0rem;
+    position: relative;
+    left: -.2rem;
     padding-bottom: 4.0rem;
 
     display: block;
