--- a/app/styles/list_item.less
+++ b/app/styles/list_item.less
@@ -2,6 +2,7 @@
 
 ul {
     list-style-type: none;
+    position: relative;
 }
 
 ul li {
@@ -23,11 +24,13 @@ li:last-child {
     background-color: @base1;
     padding-left: 0.2em;
     position: relative;
-    // top: 0.3rem;
-left: -5rem;
+    top: 0.2rem;
+left: -3rem;
     padding-right: .3rem;
     fill: @base4 ;
 }
 
-
+.delete-icon:active {
+    fill: @base3 ;
+}
 
