--- a/app/styles/checkbox.less
+++ b/app/styles/checkbox.less
@@ -19,6 +19,20 @@
     color: @base4;
 }
 
+.checkbox-label-kraeuter {
+    color: @kraeuter;
+}
+.checkbox-label-vegetable {
+    color: @gemuese;
+}
+
+.checkbox-label-milch {
+    color: @milch;
+}
+
+.checkbox-label-drogerie {
+    color: @drogerie;
+}
 
 
 .checkbox-animated:before {
