--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -4,10 +4,19 @@
 
 @base3: #045973;
 
-@base3-light: rgba(4, 89, 115, .8);
+@base3-light: rgba(4, 89, 115, .2);
 
+// done
 @base4: #A39F8C;
 
 @base5: #002F2F;
 
 @base6: #9E563F;
+
+@kraeuter: #9BA668;
+
+@gemuese: #5C832F;
+
+@milch: #BD8D46;
+
+@drogerie: #363942;
