--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -7,9 +7,11 @@ header {
 
     position: relative;
     // left: -1rem;
-    padding-top: 15px;
-    // font-family: 'Oswald';
-    // color: #7F7C60;
-    // border-bottom: 2px dotted #AFABA8;
-    margin-bottom: 5rem;
+    padding-top: 0px;
+    font-family: 'Oswald';
+
+    // color: @base6;
+    // background-color: @base3-light;
+    border-bottom: 2px dotted #AFABA8;
+    // margin-bottom: 5rem;
 }
