--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -23,7 +23,7 @@ Input[type='text'] {
 .plus-icon {
     display: inline-block;
     border: none;
-    background-color: @base1;
+    background-color: transparent;
     padding-left: 0.2em;
     position: relative;
     top: 0.3rem;
