--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -4,13 +4,18 @@
 }
 .items {
     list-style-type: none; padding: 0;
-    height: 390px;
-    // overflow-y: auto;
     // overflow-x: hidden;
     // width: 200px;
 }
+
+@media screen and (device-width: 360px) and (device-height: 592px) and (-webkit-device-pixel-ratio: 3) {.items {
+    height: 500px;
+    overflow-y: auto;
+}
+}
+
 .items li {
-    height: 50px; width: 100%; line-height: 50px; padding-left: 20px;
+    height: 44px; width: 100%; line-height: 50px; padding-left: 20px;
     position: absolute; top: 0; left: 0;
     transition: all .2s ease-out;
 }
