--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -2,28 +2,13 @@
     border-top: 1px;
     padding-left: 14px;
 }
-.items {
-    list-style-type: none; padding: 0;
-    // overflow-x: hidden;
-    // width: 200px;
-}
 
-@media screen and (device-width: 360px) and (device-height: 592px) and (-webkit-device-pixel-ratio: 3) {.items {
-    height: 500px;
-    overflow-y: auto;
-}
-}
-
-.items li {
-    height: 44px; width: 100%; line-height: 50px; padding-left: 20px;
-    position: absolute; top: 0; left: 0;
-    transition: all .2s ease-out;
-}
-
-// .items li#li-input {
-//     // transition: all .02s ease-out;
-//     transition: none;
+// @media screen and (device-width: 360px) and (device-height: 592px) and (-webkit-device-pixel-ratio: 3) {.items {
+//     height: 500px;
+//     overflow-y: auto;
 // }
+// }
+
 
 /* See later in the blog post for a cleaner way to generate these rules */
 .items li:nth-child(1)  { transform: translate3d(0, 0%, 0); }
