--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -2,7 +2,7 @@
 
 .svg {
     fill: @base4 ;
-    background-color: @base1;
+    background-color: transparent;
     display: inline-block;
     border: none;
 }
@@ -13,4 +13,12 @@
     top: 0.2rem;
     left: -3rem;
     padding-right: .3rem;
+}
+
+.plus-icon {
+    padding-left: 0.2em;
+    position: relative;
+    top: 0.3rem;
+    padding-right: .3rem;
+    fill: @base3 ;
 }
