font; categories coloring refactor

--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -1,4 +1,5 @@
 @import "~styles/colors";
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 
 .hidden{
@@ -7,7 +8,6 @@
 
 Input[type='text'] {
     border: 0 !important;
-    // background-color: @base1 !important;
     background-color: transparent;
     outline: 0;
     width: 12rem;
@@ -15,7 +15,7 @@ Input[type='text'] {
     border-bottom: 2px dotted @base4 !important;
     margin-bottom: 2em;
     color: @base3;
-    font-family: "Lato";
+    font-family: "Roboto Slab";
     font-weight: 300;
 }
 
