--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,10 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Lato);
+// @import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
 @import "~styles/colors";
 
 html {
 }
 body {
-    font: 130% 'Lato';
+    font: 120% 'Roboto Slab';
     color: @base3;
     text-rendering: optimizelegibility;
     // line-height: 1.5;
