color categories as background works well

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -33,8 +33,8 @@ body {
 
 
 .main {
-    padding-top: 1rem;
-    padding-left: 1rem;
+    // padding-top: 1rem;
+    // padding-left: 1rem;
     margin: 0 auto;
     display: block;
     background-color: @base1;
