--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -10,7 +10,7 @@ Input[type='text'] {
     border: 0 !important;
     background-color: transparent;
     outline: 0;
-    width: 12rem;
+    width: 14rem;
     padding-left: 0;
     border-bottom: 2px dotted @base4 !important;
     margin-bottom: 2em;
@@ -24,9 +24,10 @@ Input[type='text'] {
 form {
     // margin-top: .2rem;
     // padding-left: 2.0rem;
+    overflow-x: visible;
     position: relative;
-    left: -.2rem;
-    padding-bottom: 3.0rem;
+    left: .8rem;
+    padding-bottom: 1.5rem;
 
     display: block;
 }
