--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,13 +1,14 @@
-@base1: #EFECCA;
+@base1: #ffeedd;
 
-@base2: #E6E2AF;
+@base2: #BDB0A4;
 
-@base3: #045973;
+@base3: #444;
+@base3-light: #777;
 
-@base3-light: rgba(4, 89, 115, .2);
+// @base3-light: rgba(4, 89, 115, .9);
 
 // done
-@base4: #A39F8C;
+@base4: @base2;
 
 @base5: #002F2F;
 
