--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,6 +1,8 @@
 @base1: #ffeedd;
 
-@base2: #BDB0A4;
+@base2: #AB9F94;
+
+@base2-light: #D4C5B7;
 
 @base3: #444;
 @base3-light: #777;
@@ -10,7 +12,7 @@
 // done
 @base4: @base2;
 
-@base5: #002F2F;
+@base5: #046380;
 
 @base6: #9E563F;
 
