--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -10,9 +10,10 @@ Input[type='text'] {
     border: 0 !important;
     background-color: transparent;
     outline: 0;
-    width: 14rem;
+    width: 15.8rem;
+    margin-top: 1rem;
     padding-left: 0;
-    border-bottom: 2px dotted @base4 !important;
+    border-bottom: 2px dotted @base2 !important;
     margin-bottom: 2em;
     color: @base3;
     font-family: "Roboto Slab";
@@ -48,3 +49,8 @@ form {
    color: @base4;
 }
 
+#li-input {
+    border-left: none;
+    // background: rgba(0,0,0,.1);
+    border-right: none;
+}
