--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -11,8 +11,28 @@
     padding-left: 0.2em;
     position: relative;
     top: 0.2rem;
-    left: -3.0rem;
+    left: -2.5rem;
     padding-right: .3rem;
+}
+
+.doneall-icon {
+    position: relative;
+    top: 0.3rem;
+    left: 1.1rem;
+    padding-right: .3rem;
+    fill: @base3;
+}
+.doneall-icon-all-done {
+    fill: @base2;
+}
+
+.delete-all-icon {
+    padding-left: 0.2em;
+    position: relative;
+    top: 0.2rem;
+    left: -.5rem;
+    padding-right: .3rem;
+    fill: @base3;
 }
 
 .plus-icon {
