--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -2,10 +2,10 @@
 
 .items {
     list-style-type: none; padding: 0;
-    height: 500px;
+    height: 600px;
     overflow-y: auto;
     overflow-x: hidden;
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -25,6 +25,9 @@ ul {
 
 ul li {
     padding-bottom: 1.5rem;
+    // border-left: 1px dotted @base2;
+    // border-right: 1px dotted @base2;
+    // box-shadow:         3px 0px 2px 2px #000;
     // margin-bottom: 1.5rem;
 }
 
@@ -51,3 +54,4 @@ label.item-done {
 li.category-start {
     border-top: 1px dotted @base2;
 }
+
