--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -1,7 +1,12 @@
+@import "~styles/colors";
 .list {
     border-top: 1px;
     padding-left: 14px;
+    background: @base1;
+      box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.34);
 }
+
+
 
 // @media screen and (device-width: 360px) and (device-height: 592px) and (-webkit-device-pixel-ratio: 3) {.items {
 //     overflow-y: auto;
