--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,11 +1,12 @@
-@base1: #ffeedd;
+@base1: #FFFAF5;
+@base1-warm: #ffeedd;
 
-@base2: #AB9F94;
+@base2: #9e9e9e;
 
-@base2-light: #D4C5B7;
+@base2-light: #BDBDBD;
 
 @base3: #444;
-@base3-light: #777;
+@base3-light: #F5F5F5;
 
 // @base3-light: rgba(4, 89, 115, .9);
 
@@ -14,7 +15,7 @@
 
 @base5: #046380;
 
-@base6: #9E563F;
+@base6: #F44336;
 
 
 
