--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -2,6 +2,7 @@
 
 .items {
     list-style-type: none; padding: 0;
+    position: relative;
     // overflow-y: auto;
     overflow-x: hidden;
     width: 93%;
