--- a/app/styles/checkbox.less
+++ b/app/styles/checkbox.less
@@ -10,8 +10,8 @@
 }
 
 .checkbox-animated.all {
-  position: relative;
-  top: -0.13rem;
+  position: absolute;
+  top: 1.1rem;
   left: 1.22rem;
   margin: 0 1rem 0 1;
   margin-right: 20px;
