--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -10,8 +10,8 @@
 .delete-icon {
     padding-left: 0.2em;
     position: relative;
-    top: 0.2rem;
-    left: -2.5rem;
+    top: 0.4rem;
+    left: -2.6rem;
     padding-right: .3rem;
 }
 
@@ -26,13 +26,17 @@
     fill: @base2;
 }
 
-.delete-all-icon {
+.delete-all-icon, .save-icon {
     padding-left: 0.2em;
-    position: relative;
-    top: 0.2rem;
-    left: -.5rem;
+    position: absolute;
+    top: 0.4rem;
+    left: 18.3rem;
     padding-right: .3rem;
     fill: @base3;
+}
+
+.save-icon.deactivated {
+    fill: @base2;
 }
 
 .plus-icon {
@@ -42,3 +46,17 @@
     padding-right: .3rem;
     fill: @base3 ;
 }
+
+.cancel-icon {
+    fill: @base3 ;
+    position: absolute;
+    top: .4rem;
+    left: 1rem;
+    margin: 0 1rem 0 1;
+    margin-right: 20px;
+    cursor: pointer;
+    // position: relative;
+    // left: -.8rem;
+
+}
+
