recipes basic implementation

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -42,7 +42,7 @@
     padding: 0rem .0rem;
     // max-width: 14rem;
     // border: 1px solid #000;
-    border-bottom: 1px dotted @base2 !important;
+    border-bottom: 1px dotted @base2;
     // for the correct height of the underline
     height: 2.3rem;
 }
