--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -46,6 +46,14 @@
     padding-right: .3rem;
     fill: @base3 ;
 }
+.plus-icon.recipe {
+    padding-left: 0.2em;
+    position: relative;
+    top: 0.3rem;
+    left: -1.2rem;
+    // padding-right: .3rem;
+    fill: @base3 ;
+}
 
 .cancel-icon {
     fill: @base3 ;
