adding all ingredients button; render() refactorings

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -29,18 +29,18 @@
 }
 
 #caption {
-    width: 8rem;
+    max-width: 14rem;
+    min-width: 8rem;
 }
 
 #caption, #input-title {
     font-family: 'Roboto', sans-serif;
     // text-transform: uppercase;
-    letter-spacing: 1.2px;
+    letter-spacing: 1.1px;
 
     display: inline-block;
 
     padding: 0rem .0rem;
-    // max-width: 14rem;
     // border: 1px solid #000;
     border-bottom: 1px dotted @base2;
     // for the correct height of the underline
