--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -61,8 +61,7 @@ label.item-done {
 
 label.item-recipe {
     position: relative;
-    transition: color .5s ease;
-    left: .8rem;
+    left: 1.5rem;
 }
 
 // label.item-recipe:hover {
