--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -27,11 +27,6 @@
 }
 
 .delete-all-icon, .save-icon {
-    padding-left: 0.2em;
-    position: absolute;
-    top: 0.4rem;
-    left: 18.3rem;
-    padding-right: .3rem;
     fill: @base3;
 }
 
@@ -42,29 +37,47 @@
 .plus-icon {
     padding-left: 0.2em;
     position: relative;
-    top: 0.3rem;
+    top: 0.4rem;
     padding-right: .3rem;
     fill: @base3 ;
 }
-.plus-icon.recipe {
-    padding-left: 0.2em;
-    position: relative;
-    top: 0.3rem;
-    left: -1.2rem;
-    // padding-right: .3rem;
-    fill: @base3 ;
-}
 
-.cancel-icon {
-    fill: @base3 ;
+// .plus-icon.recipe {
+//     padding-left: 0.2em;
+//     position: relative;
+//     top: 0.3rem;
+//     left: -1.2rem;
+//     // padding-right: .3rem;
+//     fill: @base3 ;
+// }
+
+.header-left-icon {
     position: absolute;
     top: .4rem;
     left: 1rem;
     margin: 0 1rem 0 1;
     margin-right: 20px;
+}
+
+.header-right-icon {
+    padding-left: 0.2em;
+    position: absolute;
+    top: 0.4rem;
+    left: 18.3rem;
+    padding-right: .3rem;
+}
+
+.cancel-icon {
+    fill: @base3 ;
     cursor: pointer;
     // position: relative;
     // left: -.8rem;
 
+}
+
+.add-icon {
+    left: .85rem;
+    fill: @base3 ;
+    cursor: pointer;
 }
 
