--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -3,10 +3,10 @@
 
 @base2: #9e9e9e;
 
-@base2-light: #BDBDBD;
+@base2-light: #E0E0E0;
 
 @base3: #444;
-@base3-light: #F5F5F5;
+@base3-light: #555;
 
 // @base3-light: rgba(4, 89, 115, .9);
 
