--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -1,6 +1,4 @@
 @import "~styles/colors";
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
 
 .hidden{
     visibility: hidden;
@@ -8,7 +6,7 @@
 
 Input[type='text'] {
     border: 0 !important;
-    border-bottom: 1px dotted @base2 !important;
+    // border-bottom: 1px dotted @base2 !important;
     outline: 0;
 }
 
@@ -36,7 +34,7 @@ Input[type='text'] {
     position: relative;
     left: .8rem;
     top: -.5rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 2.5rem;
 
     display: block;
 }
