--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -1,14 +1,14 @@
 @import "~styles/colors";
 
 .svg {
-    fill: @base2 ;
+    fill: @base3-light ;
     background-color: transparent;
     display: inline-block;
     border: none;
 }
 
 .svg:active {
-    fill: @base3 ;
+    fill: @base2 ;
 }
 
 .delete-icon {
@@ -26,13 +26,8 @@
     padding-right: .3rem;
     fill: @base2;
 }
-.doneall-icon-all-done {
-    fill: @base2;
-}
 
-.delete-all-icon, .save-icon {
-    fill: @base2;
-}
+
 
 .save-icon.deactivated {
     visibility: hidden;
@@ -44,7 +39,6 @@
     position: relative;
     top: 0.4rem;
     padding-right: .3rem;
-    fill: @base2 ;
 }
 
 // .plus-icon.recipe {
@@ -91,3 +85,4 @@
     position: absolute;
     left: 18.3rem;
 }
+
