--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -8,9 +8,9 @@
     // background: url(~img/grapefruit.png);
     // border: 1px solid @base2-light;
     border-top: none;
-    border-bottom: none !important;
+    border-bottom: 1px solid @base2-light;
     background: #fff;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.07);
+    // box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.07);
     text-align: center;
     // background-color: @base1;
     // border-radius: 3px 3px 0 0;
@@ -34,15 +34,18 @@
 }
 
 #caption, #input-title {
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Roboto', sans-serif;
     // text-transform: uppercase;
-    letter-spacing: 1.1px;
+    font-size: 110%;
+    // font-weight: 700;
+
+    // letter-spacing: 1.1px;
 
     display: inline-block;
 
     padding: 0rem .0rem;
     // border: 1px solid #000;
-    border-bottom: 1px dotted @base2;
+    // border-bottom: 1px dotted @base2;
     // for the correct height of the underline
     height: 2.3rem;
 }
