--- a/app/styles/footer.less
+++ b/app/styles/footer.less
@@ -1,5 +1,27 @@
+@import "~styles/colors";
+
+
 #footer {
     position: absolute;
-    bottom: 0.7rem;
-    right: 1.0rem;
+    width: 100%;
+    height: 56px;
+    // background: white;
+    border-top: 1px solid @base2-light;
+    // box-shadow: 0 -5px 10px 0 rgba(0, 0, 0, 0.07);
+    z-index: 0;
+    padding: 0;
+    bottom: 0;
 }
+
+.footer-content {
+    // background: blue;
+    margin: 4px;
+    position: relative;
+}
+
+.button-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
