--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -5,3 +5,14 @@
     background: @base1;
       box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.34);
 }
+
+.items {
+    list-style-type: none; padding: 0;
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+    width: 94%;
+    margin: 0 auto;
+    margin-top: .1rem;
+    margin-bottom: 1rem;
+}
