--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -5,7 +5,7 @@
 html {
 }
 body {
-    font: 110% 'Roboto Slab';
+    font: 110% 'Roboto Slab', sans-serif;
     color: @base3;
     user-select: none;
     text-rendering: optimizelegibility;
@@ -45,20 +45,3 @@ body {
     // height: 280px;
 }
 
-.example-enter {
-  opacity: 0;
-  transition: opacity .4s ease-in;
-}
-
-.example-enter.example-enter-active {
-  opacity: 1;
-}
-
-.example-leave {
-  opacity: 1;
-  transition: opacity .4s ease-out;
-}
-
-.example-leave.example-leave-active {
-  opacity: 0;
-}
