sliding button! nice

--- a/app/styles/slidein.less
+++ b/app/styles/slidein.less
@@ -1,11 +1,11 @@
 .slidein-enter {
     position: relative;
-    left: -25rem;
-    transition: left .3s ease-out;
+    bottom: -25rem;
+    transition: bottom .8s ease-in;
 }
 
 .slidein-enter.slidein-enter-active {
-    left: 0;
+    bottom: 0;
 }
 
 .slidein-leave {
