puoa.. getting somewhere .. ux is hard

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -36,12 +36,13 @@ body {
 
 .main {
     padding-top: 1rem;
+    overflow-y: auto;
     margin: 1rem;
     // padding-left: 1rem;
     margin: 0 auto;
     display: block;
     // background-color: @base1;
     max-width: 360px;
-    // height: 280px;
+    height: 600px;
 }
 
