--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -24,7 +24,20 @@ li:last-child {
     padding-bottom: 0rem;
 }
 
+// .item-toucharea {
+//     width: 30%;
+// }
 
+.label-wrap {
+    display: inline-block;
+    padding-right: 6rem;
+    max-width: 100%;
+
+}
+.label-text {
+    position: relative;
+    left: 1rem;
+}
 label.item {
     position: relative;
     right: -2rem;
