--- a/app/styles/new_recipe_button.less
+++ b/app/styles/new_recipe_button.less
@@ -1,6 +1,11 @@
 @import "~styles/colors";
 
 .new-recipe-button {
-    background: @base7;
+    background: @base7-light;
     border-radius: 2px;
 }
+
+.new-recipe-button.active {
+    background: @base7;
+}
+
