--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,3 +1,4 @@
+// @base1: #FFFAF5;
 @base1: #FFFAF5;
 @base1-warm: #ffeedd;
 
@@ -17,7 +18,7 @@
 
 @base6: #F44336;
 
-@base7: rgba(150, 202, 45, .5);
+@base7: rgba(150, 202, 45, .6);
 
 @base7-light: rgba(150, 202, 45, .4);
 
