--- a/app/styles/button.less
+++ b/app/styles/button.less
@@ -18,10 +18,25 @@
     color: @base3;
 }
 
-.button-flat.active {
-    // color: @base5;
-    background: @base7-light;
+
+.button-flat:hover, .button-no-active:hover {
+    cursor: pointer;
+    // background: @base7-light2;
 }
+
+// @media only screen and (min-width: 900px) {
+// }
+
+    .button-flat.active{
+        // color: @base5;
+        background: @base7-light;
+    }
+    .button-flat.active{
+        // color: @base5;
+        background: @base7-light;
+    }
+// , .button-flat:active,  .button-no-active:active 
+// , .button-flat:active,  .button-no-active:active 
 
 .paper-ripple {
   position: absolute;
