--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -3,10 +3,13 @@
 @base1-warm: #ffeedd;
 
 @base2: #9e9e9e;
+@base2-trans: rgba(158, 158, 158, .5);
 
 @base2-light: #E0E0E0;
 
-@base3: #444;
+@base2-light2: #dbdbdb;
+
+@base3: #222;
 @base3-light: #555;
 
 // @base3-light: rgba(4, 89, 115, .9);
@@ -18,9 +21,11 @@
 
 @base6: #F44336;
 
-@base7: rgba(150, 202, 45, .7);
+@base7-light: rgba(150, 202, 45, .4);
+@base7-light2: rgba(150, 202, 45, .2);
+@base7-light3: rgba(150, 202, 45, .1);
 
-@base7-light: rgba(150, 202, 45, .5);
+@base7: rgba(150, 202, 45, .4);
 
 
 
