--- a/app/styles/input.less
+++ b/app/styles/input.less
@@ -5,7 +5,7 @@
 }
 
 Input[type='text'] {
-    border: 0 !important;
+    border: 0;
     // border-bottom: 1px dotted @base2 !important;
     outline: 0;
 }
@@ -13,7 +13,7 @@ Input[type='text'] {
 #input-item {
     // background-color: transparent;
     // border: 2px dotted #000 !important;
-    // border: 2px #000;
+    border: none;
     width: 15.8rem;
     margin-top: 1rem;
     padding-left: 0;
