--- a/app/styles/new_recipe_button.less
+++ b/app/styles/new_recipe_button.less
@@ -1,7 +1,7 @@
 @import "~styles/colors";
 
 .new-recipe-button {
-    background: @base7-light;
+    background: @base7-light2;
     border-radius: 2px;
 }
 
