--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -36,13 +36,18 @@ body {
 
 .main {
     padding-top: 1rem;
-    overflow-y: auto;
     margin: 1rem;
     // padding-left: 1rem;
     margin: 0 auto;
     display: block;
-    // background-color: @base1;
     max-width: 360px;
     height: 600px;
+}
+
+@media only screen and (max-device-width: 480px) {
+    .main {
+        overflow-y: auto;
+        background-color: @base2-light;
+    }
 }
 
