--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -10,6 +10,21 @@
     transition: all .2s ease-out;
 }
 
+.picture {
+    height: 250px !important;
+    width: 90%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    position: absolute;
+    top: 50px !important;
+    left: 0;
+    transition: all .2s ease-out;
+}
+
+.picture img {
+    width: 100%;
+}
+
 ul {
     margin-top: 0;
     list-style-type: none;
@@ -50,5 +65,15 @@ label.item-done {
 
 label.item-recipe {
     position: relative;
-    left: 1.5rem;
+    left: .2rem;
+}
+
+.input-form-item {
+    position: relative;
+    left: 1rem ! important;
+}
+
+.input-item {
+    font-weight: 200 !important;
+    border-bottom: none !important;
 }
