--- a/app/styles/list_header.less
+++ b/app/styles/list_header.less
@@ -6,46 +6,128 @@
     // background: url(~img/grapefruit.png);
     // border: 1px solid @base2-light;
     border-top: none;
-    border-bottom: 1px solid @base2-light;
-    background: #fff;
+    // height: 100px;
+    border-bottom: 1px solid @base2-light2;
+    border-radius: 0px;
+
+    // background: #fff;
     // box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.07);
     text-align: center;
     // background-color: @base1;
     // border-radius: 3px 3px 0 0;
 }
+
+#list-header.active {
+    background: @base7-light3;
+}
+
+
 .input-form-title {
     // margin-top: .2rem;
     // padding-left: 2.0rem;
     overflow-x: visible;
     position: relative;
-    left: .2rem;
     top: -.45rem;
+    display: inline-block;
+    left: .2rem;
+
+    // margin: 0 auto;
     padding-bottom: 1.5rem;
+    display: inline-block;
+
 
     min-width: 8rem;
-    display: block;
 }
+
+
 
 #caption {
-    max-width: 14rem;
+    max-width: 16.0rem;
     min-width: 8rem;
+    cursor: pointer;
+    position: relative;
+    // top:e.5rem;
+    overflow-y: hidden;
+    height: 50px;
+    // line-height: 120%;
+    font-weight: 600;
 }
 
-#caption, #input-title {
-    // font-family: 'Roboto', sans-serif;
-    // text-transform: uppercase;
-    font-size: 110%;
-    // font-weight: 700;
+.meta {
+    padding-left: 0.2em;
+    position: absolute;
+    // top: -0.4rem;
+    font-family:  sans-serif;
+    font-size: 90%;
+    font-weight: 400;
+    background-color: @base7-light2;
+    width: 2.5rem;
+    height: 1.8rem;
+    border-radius: 5px;
+    line-height: 1.8rem;
 
-    // letter-spacing: 1.1px;
+    text-align: center;
+    color: @base3-light;
+    top: .65rem;
+    left: 18.2rem;
+    padding-right: .3rem;
+
+    // border: 2px solid @base2;
+}
+
+.counter {
+    position: absolute;
+    border: none;
+    // top: 1rem;
+    right: 1rem;
+    font-family: 'Roboto', sans-serif;
+    color: @base2;
+    font-size: 130%;
+}
+
+
+.input-form-meta {
+    overflow-x: hidden;
+    // position: relative;
+    font-family: 'Roboto Slab', sans-serif;
+    // top: -.45rem;
+    display: inline-block;
+}
+
+
+#input-meta {
+    background: transparent;
+    // font-family: 'Roboto Slab', sans-serif;
+    margin: auto;
+    text-align: center;
+
+    // margin-top: 1.3rem;
+    height: 23px;
+    // text-align: center;
+    padding: 0;
+    margin-left: 0;
+    // border-bottom: 2px dotted @base2-trans;
+}
+
+
+// #caption:active {
+//     text-decoration: underline;
+// }
+
+#caption, #input-title {
+    font-family: 'Roboto Slab', sans-serif;
+    // text-transform: uppercase;
+    // font-size: 110%;
+
+    // letter-spacing: .2px;
 
     display: inline-block;
 
     padding: 0rem .0rem;
-    // border: 1px solid #000;
+    // border: 5px solid #000;
     // border-bottom: 1px dotted @base2;
     // for the correct height of the underline
-    height: 2.3rem;
+    // height: 1rem;
 }
 
 #input-title {
@@ -57,7 +139,9 @@
     // text-align: center;
     padding: 0;
     margin-left: 0;
+    border-bottom: 2px dotted @base2-trans;
 }
+
 
 .button-unstyled.delete-all {
     color: @base2;
