--- a/app/styles/slidein.less
+++ b/app/styles/slidein.less
@@ -1,10 +1,12 @@
 .slidein-enter {
     position: relative;
     left: -25rem;
-    transition: transform .4s ease-out;
+    opacity: 0;
+    transition: opacity, transform .4s ease-out;
 }
 
 .slidein-enter.slidein-enter-active {
+    opacity: 1;
     transform: translate3d(25rem, 0,0);
 }
 
