--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -8,14 +8,14 @@
 }
 
 .svg:active {
-    fill: @base2 ;
+    fill: @base3;
 }
 
 .delete-icon {
     padding-left: 0.2em;
     position: relative;
-    top: 0.4rem;
-    left: -2.6rem;
+    top: -4.6rem;
+    left: -.8rem;
     padding-right: .3rem;
 }
 
@@ -26,8 +26,6 @@
     padding-right: .3rem;
     fill: @base2;
 }
-
-
 
 .save-icon.deactivated {
     visibility: hidden;
@@ -41,19 +39,19 @@
     padding-right: .3rem;
 }
 
-// .plus-icon.recipe {
-//     padding-left: 0.2em;
-//     position: relative;
-//     top: 0.3rem;
-//     left: -1.2rem;
-//     // padding-right: .3rem;
-//     fill: @base3 ;
-// }
+.plus-icon.recipe {
+    padding-left: 0.2em;
+    position: relative;
+    top: 0.3rem;
+    left: -1.2rem;
+    // padding-right: .3rem;
+    fill: @base3 ;
+}
 
 .header-left-icon {
     position: absolute;
     top: .4rem;
-    left: 1rem;
+    left: .8rem;
     margin: 0 1rem 0 1;
     margin-right: 20px;
 }
@@ -62,7 +60,7 @@
     padding-left: 0.2em;
     position: absolute;
     top: 0.4rem;
-    left: 18.3rem;
+    left: 18.8rem;
     padding-right: .3rem;
 }
 
