part 1 refactoring - items work ok again

--- a/app/styles/svg.less
+++ b/app/styles/svg.less
@@ -18,6 +18,13 @@
     left: -.8rem;
     padding-right: .3rem;
 }
+.delete-icon.recent {
+    padding-left: 0.2em;
+    position: relative;
+    top: -5.9rem;
+    left: -.8rem;
+    padding-right: .3rem;
+}
 
 .doneall-icon {
     position: relative;
