--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -11,18 +11,14 @@
 }
 
 .picture {
-    height: 250px !important;
+    height: 200px !important;
     width: 90%;
     overflow-x: hidden;
     overflow-y: hidden;
-    position: absolute;
-    top: 50px !important;
+    position: absolute; 
+    top: 50px !important; 
     left: 0;
     transition: all .2s ease-out;
-}
-
-.picture img {
-    width: 100%;
 }
 
 ul {
@@ -53,6 +49,7 @@ li:last-child {
     position: relative;
     left: 1rem;
 }
+
 label.item {
     position: relative;
     right: -2rem;
@@ -73,7 +70,7 @@ label.item-recipe {
     left: 1rem ! important;
 }
 
-.input-item {
+#input-item {
     font-weight: 200 !important;
     border-bottom: none !important;
 }
