refactoring part 2 : lot of stuff works; lots of context; much clean much small !

--- a/app/styles/list_header.less
+++ b/app/styles/list_header.less
@@ -33,6 +33,7 @@
 
     // margin: 0 auto;
     padding-bottom: 1.5rem;
+    padding-right: 1.5rem;
     display: inline-block;
 
 
@@ -102,6 +103,7 @@
     text-align: center;
 
     // margin-top: 1.3rem;
+    width: 1.5rem;
     height: 23px;
     // text-align: center;
     padding: 0;
