i think refactoring is quite done, wooho

--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -62,10 +62,14 @@ label.item-done {
 
 label.item-recipe {
     position: relative;
-    left: .2rem;
+    left: .5rem;
 }
 
 .input-form-item {
+    position: relative;
+    left: .8rem ! important;
+}
+.input-form-edit-item {
     position: relative;
     left: 1rem ! important;
 }
