--- a/app/styles/list_header.less
+++ b/app/styles/list_header.less
@@ -89,6 +89,8 @@
 
 .input-form-meta {
     overflow-x: hidden;
+    overflow-y: hidden;
+    // height: 23px;
     // position: relative;
     font-family: 'Roboto Slab', sans-serif;
     // top: -.45rem;
@@ -100,7 +102,7 @@
     background: transparent;
     // font-family: 'Roboto Slab', sans-serif;
     margin: auto;
-    text-align: center;
+    // text-align: center;
 
     // margin-top: 1.3rem;
     width: 1.5rem;
@@ -137,11 +139,12 @@
     margin: auto;
 
     margin-top: 1.3rem;
-    height: 23px;
+    height: 25px;
+
     // text-align: center;
     padding: 0;
     margin-left: 0;
-    border-bottom: 2px dotted @base2-trans;
+    border-bottom: 1px dotted @base2-trans;
 }
 
 
