check in all this stuff; try out new flexbox layout now

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,6 +1,6 @@
 // @base1: #FFFAF5;
 @base1: #FFFAF5;
-@base1-warm: #ffeedd;
+@base1-warm: #424140;
 
 @base2: #9e9e9e;
 @base2-trans: rgba(158, 158, 158, .6);
