--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -11,7 +11,8 @@ body {
     text-rendering: optimizelegibility;
     // line-height: 1.5;
     font-weight: normal;
-    background-color: #333;
+    // background-color: #444;
+        background-color: @base1-warm;
     // background: url(~img/grapefruit.png);
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-tap-highlight-color: transparent; /* For some Androids */
@@ -44,10 +45,10 @@ body {
     height: 600px;
 }
 
-@media only screen and (max-device-width: 480px) {
-    .main {
-        overflow-y: auto;
-        background-color: @base2-light;
-    }
-}
+// @media only screen and (max-device-width: 480px) {
+//     .main {
+//         overflow-y: auto;
+//         background-color: @base2-light;
+//     }
+// }
 
