--- a/app/styles/item.less
+++ b/app/styles/item.less
@@ -15,8 +15,8 @@
     width: 90%;
     overflow-x: hidden;
     overflow-y: hidden;
-    position: absolute; 
-    top: 50px !important; 
+    position: absolute;
+    top: 50px !important;
     left: 0;
     transition: all .2s ease-out;
 }
@@ -75,6 +75,18 @@ label.item-recipe {
 }
 
 #input-item {
-    font-weight: 200 !important;
-    border-bottom: none !important;
+    font-family: 'Roboto Slab', sans-serif;
+    display: inline-block;
+    font-weight: 200;
+    border-bottom: none;
+
+    background: transparent;
+    margin: auto;
+
+    margin-top: 1.3rem;
+    height: 25px;
+
+    // text-align: center;
+    padding: 0;
+    margin-left: 0;
 }
