background dark also on mobile

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -45,10 +45,10 @@ body {
     height: 600px;
 }
 
-// @media only screen and (max-device-width: 480px) {
-//     .main {
-//         overflow-y: auto;
-//         background-color: @base2-light;
-//     }
-// }
+@media only screen and (max-device-width: 480px) {
+    .main {
+        overflow-y: auto;
+        // background-color: @base2-light;
+    }
+}
 
