too much refactoring

--- a/app/styles/list_header.less
+++ b/app/styles/list_header.less
@@ -1,13 +1,13 @@
 @import "~styles/colors";
 
-#list-header {
+.list-header {
     border-top: none;
     border-bottom: 1px solid @base2-light2;
     border-radius: 0px;
     text-align: center;
 }
 
-#list-header.active {
+.list-header.active {
     background: @base7-light3;
 }
 
