--- a/app/styles/list.less
+++ b/app/styles/list.less
@@ -7,12 +7,14 @@
       box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.20);
 
     list-style-type: none; padding: 0;
-    position: relative;
     border-radius: 2px;
     overflow: hidden;
     width: 95.0%;
     margin: 0 auto;
     margin-top: .1rem;
     margin-bottom: 1rem;
+    margin-top: 0;
+    list-style-type: none;
 }
+
 
